--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.example.ti.ble.sensortag"
+        applicationId "com.celulabs.pfcsense"
         minSdkVersion 18
         targetSdkVersion 21
     }
